Fix music library header columns out of alignment with body. Closes #28.
- Always show a scrollbar in the music library. This doesn’t look bad, and it makes implementing this fix more straightforward
- Work around a WebKit bug (<https://bugs.webkit.org/show_bug.cgi?id=59483>)

--- a/server/static/common/style.less
+++ b/server/static/common/style.less
@@ -501,7 +501,7 @@ th.descending #freshHead, th.ascending #freshHead{
 #musicTableHead th {
 	border-left: 1px solid @lightBorder;
 }
-#musicTableHead thead tr, #subscriptions thead tr{
+#musicTableHeadContainer, #subscriptions thead tr{
 	background-color: rgb(225, 225, 225);
 	.commonGradient;
 }
@@ -521,6 +521,9 @@ th.descending #freshHead, th.ascending #freshHead{
 	left: 0;
 	top: 0;
 	position: absolute;
+}
+html.JS #musicTableBodyContainer{
+	overflow-y: scroll;
 }
 #musicTableBodyContainer{
 	top: 2.4em;
